# scrapydweb

./: .dockerignore  .gitignore  HISTORY.md  MANIFEST.in  README.md  alembic.ini  docker-compose.deploy.yml  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
docker/: Dockerfile  Dockerfile.scrapyd  entrypoint.sh  scrapyd.conf
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: app-sidebar.tsx  confirm-dialog.tsx  layout.tsx  node-multi-select.tsx  project-combobox.tsx  project-dialog.tsx  search-command.tsx  status-pill.tsx  topbar.tsx  user-menu.tsx
frontend/src/components/schedule/: args-card.tsx  cron-preview.tsx  setting-key-combobox.tsx  setting-value-input.tsx  settings-card.tsx  summary-panel.tsx  target-card.tsx  when-card.tsx
frontend/src/components/ui/: alert-dialog.tsx  card.tsx  command.tsx
frontend/src/lib/: api.ts  datetime.ts  node-context.tsx  schedule-payload.ts  scrapy-settings.ts  utils.ts
frontend/src/pages/: alerts.tsx  code.tsx  dashboard.tsx  deploy.tsx  group.tsx  jobs.tsx  log.tsx  login.tsx  projects.tsx  schedule.tsx  settings.tsx  tasks.tsx  tokens.tsx
scrapydweb/: __init__.py  __version__.py  app.py  asgi.py  auth.py  common.py  context.py  db.py  db_sync.py  default_settings.py  deps.py  models.py  responses.py  run.py  scheduler.py  settings.py  settings_registry.py  settings_store.py  templating.py  urls.py  vars.py
scrapydweb/migrations/: env.py  script.py.mako
scrapydweb/migrations/versions/: b3f228171b78_project_registry_fold_deploy_repo.py  bcc935582a1a_initial_schema.py  c4a1e7f29d10_add_job_group.py  cf068331bc8c_initial_schema.py  d5b2f8a31c92_add_api_token.py  e6c3a9f47b21_job_args_group_notify.py
scrapydweb/routers/: __init__.py  alerts.py  api.py  apiv2.py  auth.py  clusterreports.py  deploy.py  deploy_ci.py  groups.py  index.py  items.py  jobs.py  log.py  logs.py  metadata.py  metrics.py  multinode.py  nodereports.py  parse.py  projects.py  schedule.py  send_text.py  servers.py  settings.py  tasks.py  tokens.py  webhooks.py
scrapydweb/services/: alert_rules.py  alerts.py  dashboard.py  job_versions.py  jobs_sync.py  logstats.py  metrics.py  notify.py  scrapyd.py  scrapyd_deploy.py  tasks.py
scrapydweb/templates/scrapydweb/: tasks_history.html
scrapydweb/utils/: apply_settings.py  check_app_config.py  scheduler.py  setup_database.py  sub_process.py
tests/: conftest.py  fake_scrapyd.py  test_aa_logparser.py  test_alerts.py  test_api_basic.py  test_api_lifecycle.py  test_api_overhaul.py  test_api_tasks.py  test_api_tokens.py  test_api_webhooks.py  test_auth_more.py  test_context_zero_servers.py  test_deploy_more.py  test_deploy_single_scrapyd.py  test_job_versions.py  test_jobs_dashboard.py  test_log.py  test_log_router.py  test_logstats_collector.py  test_metadata.py  test_metrics.py  test_mobileui.py  test_notify_email.py  test_page.py  test_page_single_scrapyd.py  test_projects.py  test_reports.py  test_schedule.py  test_schedule_fast.py  test_schedule_single_scrapyd.py  test_scrapyd_proxy.py  test_settings_registry.py  test_tasks.py  test_tasks_fast.py  test_tasks_single_scrapyd.py  utils.py
tests/e2e/: shots.py  smoke.py
tests/live/: conftest.py  test_live_lifecycle.py  test_live_tasks.py
