[build-system]
requires = ["setuptools>=40.6.3,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapydweb"
dynamic = ["version"]
description = "Web app for Scrapyd cluster management, with support for Scrapy log analysis & visualization."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GNU General Public License v3.0" }
authors = [{ name = "my8100", email = "my8100@gmail.com" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "requests>=2.21.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",          # async engines on PostgreSQL
    "psycopg2-binary>=2.9",   # sync engines + APScheduler jobstore + setup_postgresql()
    "APScheduler>=3.10,<4",
    "logparser>=0.8.4",
    "tzlocal>=4",
    "w3lib>=2.0",
    "werkzeug>=2.0",          # secure_filename / user-agent helpers only
    "click>=7.1.2",
    "colorama>=0.4",
    "pexpect>=4.7",
    "ptyprocess>=0.6",
    "pytz>=2018.9",
    "six>=1.16",
    "alembic>=1.16.5",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/my8100/scrapydweb"

[project.scripts]
scrapydweb = "scrapydweb.run:main"

# Test dependencies. scrapy/scrapyd/Twisted are needed only to run the live
# integration tests, not by scrapydweb itself. scrapy>=2.13 dropped the
# Spider.start_requests() API the demo eggs rely on, and Twisted>=25 removed a
# symbol scrapy<2.13 imports, so both are capped here.
[dependency-groups]
test = [
    "pytest",
    "pytest-asyncio>=0.23",
    "scrapy<2.13",
    "scrapyd",
    "Twisted<25",
    "setuptools<81",  # scrapyd's runner.py imports pkg_resources (gone in setuptools>=81)
]

[tool.uv]
default-groups = ["test"]

[tool.setuptools.dynamic]
version = { attr = "scrapydweb.__version__.__version__" }

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true
zip-safe = false
